<?xml version="1.0"?>
<package>
  <name>rosplan_interface_prediction</name>
  <version>0.0.0</version>
  <description>Interface between ROSPlan and the UIBK learning tool for initial state prediction.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>
  <url type="website">/http://www.squirrel-project.eu/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>squirrel_prediction_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>
  <run_depend>squirrel_prediction_msgs</run_depend>

  <export></export>
</package>
