<?xml version="1.0"?>
<package>
  <name>squirrel_relations_prediction</name>
  <version>0.0.0</version>
  <description>The squirrel_relations_prediction package</description>
  <maintainer email="senka.krivic@uibk.ac.uk">Senka Krivic</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
